# aitk

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md
src/aitk/: __init__.py  env.py
src/aitk/audio/: __init__.py  commands.py
src/aitk/browser/: __init__.py  commands.py
src/aitk/env/: __init__.py  cli.py  store.py
src/aitk/image/: __init__.py  commands.py
src/aitk/notion/: __init__.py  commands.py
src/aitk/scrape/: __init__.py  commands.py
src/aitk/search/: __init__.py  commands.py
src/aitk/video/: __init__.py  commands.py
